--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -3,7 +3,7 @@ info:
   title: API THEye
   description: "THEye backend server API description."
   termsOfService: https://theye.ch/en/terms
-  version: '0.44.1'
+  version: '0.45.0'
   contact: 
     name: FiveCo Innovative Engineering
     url: https://www.fiveco.ch
@@ -143,6 +143,57 @@ components:
           example: {'custom_property_1': '10', 'custom_property_2':'23'}
         status:
           $ref: '#/components/schemas/status'
+    advertisement:
+      type: object
+      properties:
+        device_id:
+          type: string 
+          format: base16
+          maxLength: 12 
+          minLength: 12 
+          example: 0123456789AB 
+        advertisement: 
+          type: object
+          properties:
+            AlertState:
+              type: object
+              properties:
+                Hidden: 
+                  type: boolean
+                HumidityCurrent: 
+                  type: boolean
+                HumidityPast: 
+                  type: boolean
+                HumidityPastResettable: 
+                  type: boolean
+                Status: 
+                  type: integer
+                TemperatureCurrent: 
+                  type: boolean
+                TemperaturePast: 
+                  type: boolean
+                TemperaturePastResettable: 
+                  type: boolean
+            BatteryVoltage:
+              type: number
+            FirmwareVersion:
+              type: string
+              example: '1.2'
+            LatestHumidity:
+              type: number
+            LatestTemperature:
+              type: number
+            Model:
+              type: integer
+            Type:
+              type: integer
+            Version:
+              type: integer
+            
+    advertisement_list:
+      type: array
+      items: 
+            $ref: '#/components/schemas/advertisement'
     authority-code:
       type: object
       properties:
@@ -1122,6 +1173,35 @@ components:
           example: 0123456789AB 
         status:
           $ref: '#/components/schemas/status'
+    invalid_advertisement:
+      type: object
+      properties:
+        index:
+          type: integer
+        data:
+          $ref: '#/components/schemas/advertisement'
+        errors:
+          type: object
+          properties:
+            device_id:
+              type: array
+              items: 
+                type: string 
+                example: Some Device Id Error
+            advertisement:
+              type: array
+              items: 
+                type: string 
+                example: Some Advertisement Error
+    invalid_advertisements:
+      type: object
+      properties:
+        invalid_advertisements:
+          type: array
+          items: 
+            $ref: '#/components/schemas/invalid_advertisement'
+        status:
+          $ref: '#/components/schemas/status'
     logs:
       type: object
       properties:
@@ -1558,6 +1638,8 @@ components:
         file_name:
           type: string
           example: file_name.csv
+        status:
+          $ref: '#/components/schemas/status'
     password:
       type: object
       properties:
@@ -2224,8 +2306,8 @@ paths:
                     description: "Identification Token used by autonomous device to make specific requests without being authentificated (optionnal)."
                     type: string
                     format: base16
-                    maxLength: 12 
-                    minLength: 12 
+                    maxLength: 32 
+                    minLength: 32 
                   
       security:
         - theye_oauth:
@@ -2627,6 +2709,63 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
+  /devices/{device-id}/devices-data/:
+    put:  
+      description: Allows a device (ex:Gateway) to put data of another device (THEye) on the server
+      parameters:
+        - name: device-id
+          in: path
+          required: true
+          schema:
+            type: string 
+            format: base16
+            maxLength: 12 
+            minLength: 12 
+            example: 0123456789AB 
+      requestBody:
+        description: Data of the device to update
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - id_token
+              properties:
+                id_token:
+                  description: "Identification Token used by autonomous device to make specific requests without being authentificated (optionnal)."
+                  type: string
+                  format: base16
+                  maxLength: 32 
+                  minLength: 32
+                advertisement_list:
+                  $ref : '#/components/schemas/advertisement_list' 
+          
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/invalid_advertisements'
+        '400':
+          description: Bad request. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '404':
+          description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response'
   /devices/{device-id}/set-all-logs-viewed/:
     put:
       description: Set all logs of a single device as viewed by a user.
