--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -2,7 +2,7 @@ openapi: '3.0.2'
 info:
   title: THEye backend server API
   termsOfService: https://theye.ch/en/terms
-  version: '0.47.0'
+  version: '0.49.0'
   description: |
    **Welcome in the THEye ecosystem backend server API documentation**
 
@@ -107,11 +107,19 @@ components:
           example: 'fkSF00jawdsf' 
         recaptcha_token:
           type: string
-          example: 'feskaflelgj' 
-        redirect_uri:
+          example: 'feskaflelgj'    
+    signup-email-validated:
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/status'
+        email:
           type: string
-          example: http://localhost/signup/mail-verified 
-          description: It must be registered as sensitive_redirect_uri.
+          format: email
+        signup_token:
+          type: string
+          maxLength: 43
+          minLength: 43
     status:
       type: object
       readOnly: true
@@ -1120,10 +1128,24 @@ components:
           type: string
           format:  email
           example: bob.sponge@mail.com
-        redirect_uri:
+    email-validation:
+      type: object
+      properties: 
+        email:
           type: string
-          example: https://example.com 
-          description: It must be registered as non_sensitive_redirect_uris
+          format:  email
+          example: alice.wonderland@mail.com
+        token:
+          type: string
+          pattern: '^[a-zA-Z0-9]{8}$'
+    email-change-validated:
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/status'
+        email:
+          type: string
+          format: email
     encrypted_data:
       type: object
       properties:
@@ -4044,7 +4066,6 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/status-response' 
-
   /profile/email/:
     post:
       summary: Create an e-mail change action
@@ -4078,6 +4099,58 @@ paths:
                 $ref : '#/components/schemas/status-response' 
         '403':
           description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+  /profile/email/validate/:
+    post:
+      summary: Verify and edit a user's new email
+      tags:
+        - Frontend
+      description: Receives a code send my email after a email changing request in /profile/email/. 
+        Check if it's corresponds to a non expired email changing process. 
+        If applicable, update usr's email and delete email changing process. 
+        Returns the user's new email.
+      security:
+        - theye_oauth:
+          - write
+      requestBody:
+        description: Email change validation 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/email-validation' 
+      responses:
+        '202':
+          description: Email validated and user's email updated. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/email-change-validated' 
+        '401':
+          description: Unauthorized 
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '404':
+          description: Not Found. 
           content:
             application/json:
               schema:
@@ -4205,6 +4278,54 @@ paths:
                 $ref : '#/components/schemas/status-response' 
         '404':
           description: Not found. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '500':
+          description: Internal server error. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+  /signup/email/validate/:
+    post:
+      summary: Verify a new user's email
+      tags:
+        - Frontend
+      description: Receives a code send my email after a sign up request in /signup/email/. 
+        Check if it's corresponds to a non expired sign up process. 
+        If applicable, returns a SignUp token required to finalize s SignUp process in /signup/.
+      requestBody:
+        description: New user's email validation 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref : '#/components/schemas/email-validation' 
+      responses:
+        '202':
+          description: New user's email validated. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/signup-email-validated' 
+        '401':
+          description: Unauthorized 
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '403':
+          description: Forbidden. 
+          content:
+            application/json:
+              schema:
+                $ref : '#/components/schemas/status-response' 
+        '404':
+          description: Not Found. 
           content:
             application/json:
               schema:
